avoid line break on donut charts #170

--- a/app/assets/stylesheets/resource_allocation.scss
+++ b/app/assets/stylesheets/resource_allocation.scss
@@ -15,7 +15,7 @@
 }
 
 .description {
-    font-size: 14pt;
+    font-size: 12pt;
     margin-top: 45px;
 }
 
